codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__startup__tests__narrow_startup_onboarding_gives_choices_the_full_width.snap
---
source: tui/src/app_shell/startup.rs
expression: terminal.backend().to_string()
---
"                                                            "
" Better Codex                                               "
"                                                            "
"                                                            "
" First run setup                                            "
"                                                            "
" Choose how Better Codex should treat this workspace.       "
"                                                            "
" Trusting a workspace enables project-local config, hooks,  "
" MCP servers, and execution policies before the first       "
" thread starts.                                             "
"                                                            "
" This directory is inside a Git repository; the decision    "
" applies to /workspace/project.                             "
"                                                            "
" > 1. Trust workspace                                       "
"   Load project config, hooks, MCP, and workspace policies  "
"   for this repo.                                           "
"   2. Continue untrusted                                    "
"   Use safe defaults and keep project-local configuration   "
"   disabled.                                                "
"   3. Exit                                                  "
"   Return to the terminal without starting a thread.        "
"                                                            "
"                                                            "
" Enter continue  Up/Down choose  1/2/3 jump  Esc exit       "
" You can change this later from config.toml.                "
"                                                            "
