codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__startup__tests__startup_onboarding_view_uses_gruvbox_dark_styles.snap
---
source: tui/src/app_shell/startup.rs
expression: "startup_onboarding_style_grid(TuiAppTheme::GruvboxDark)"
---
style grid 100x28:
0000000000000000000000000000000000000000000000000000000000000000000000111111111111111111111111111111
0222222222222000000000000000000000000000000000000000000000000000000000133333331111111111111111111111
0000000000000000000000000000000000000000000000000000000000000000000000111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444155555555511111111111111111111
4666666666666666444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4777777777777777777777777777777777777777777777777777744444444444444444155555555555511111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444155555555588888888888888811111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4974444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4777777777777777777777777777777777777777777777777777777777777777777444111111111111111111111111111111
4777777744444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4774444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4777777777777777777777777777777777777777777777777777777777777777777444111111111111111111111111111111
4774444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4777777777777777777777777777777777777777777777777777444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
4444444444444444444444444444444444444444444444444444444444444444444444111111111111111111111111111111
1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111
1555555555555555555555555555555555555555555555555555511111111111111111111111111111111111111111111111
1555555555555555555555555555555555555555555511111111111111111111111111111111111111111111111111111111
1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111
legend:
0 (198 cells): Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(29, 32, 33)).underline_color(Color::Reset)
1 (973 cells): Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(60, 56, 54)).underline_color(Color::Reset)
2 (12 cells): Style::new().fg(Color::Rgb(211, 134, 155)).bg(Color::Rgb(29, 32, 33)).underline_color(Color::Reset).bold()
3 (7 cells): Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(60, 56, 54)).underline_color(Color::Reset).bold()
4 (1207 cells): Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(40, 40, 40)).underline_color(Color::Reset)
5 (125 cells): Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(60, 56, 54)).underline_color(Color::Reset).dim()
6 (15 cells): Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(40, 40, 40)).underline_color(Color::Reset).bold()
7 (247 cells): Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(40, 40, 40)).underline_color(Color::Reset).dim()
8 (15 cells): Style::new().fg(Color::Rgb(142, 192, 124)).bg(Color::Rgb(60, 56, 54)).underline_color(Color::Reset).bold()
9 (1 cells): Style::new().fg(Color::Rgb(142, 192, 124)).bg(Color::Rgb(40, 40, 40)).underline_color(Color::Reset).bold()
